[tool.poetry]
name = "TestTools"
version = "0.5.5"
description = ""
license = "Apache-2.0"
readme = "README.md"
authors = ["Kevin T. Chu <kevin@velexi.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
